--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -13,21 +14,26 @@
 </head>
 
 <body>
+    <button id="musicButton" onclick="playSound()" type="button" class="btn sound"><i class="bi bi-volume-down-fill"></i></button>
+    <audio id="music" src="sound/music.mp3" autoplay loop></audio>
     <header>
         <br><br><br><br>
         <h1>Chonnikan Auetanickul</h1>
         <br><br><br>
         <ul>
-            <li><a id="nav-about" class="active" onclick="change('about')">About Me</a></li>
-            <li><a id="nav-exp" onclick="change('exp')">Experience</a></li>
-            <li><a id="nav-skill" onclick="change('skill')">Skills</a></li>
+            <li><a id="nav-about" class="navi active" onclick="change('about')">About Me</a></li>
+            <li><a id="nav-exp" class="navi" onclick="change('exp')">Experience</a></li>
+            <li><a id="nav-skill" class="navi" onclick="change('skill')">Skills</a></li>
         </ul>
     </header>
     <article id="about">
         <h2>About Me</h2>
         <p>Hi, my name is Chonnikan Auetanickul. You can call me 'Mai'. I'm 22 years old and completed Bachelor's Degree in Computer Science from Chulalongkorn University with a 3.30/4.00 GPA (2nd Class Honors). For more details, let's take a look at the
             sections 'Experience' and 'Skills'.</p>
-
+        <p class="sub-article">Contact me :)</p>
+        <button type="button" class="btn inline btn-outline-dark" onclick="link('https://www.linkedin.com/in/chonnikan-auetanickul/')"><i class="bi bi-linkedin"> LinkedIn</i></button>
+        <button type="button" class="btn btn-outline-dark" onclick="link('https://github.com/chonnikan-aue')"><i class="bi bi-github"> GitHub</i></button>
+        <br>
     </article>
     <article id="exp">
         <h2>Experience</h2>
@@ -59,9 +65,11 @@
         </p>
     </article>
     <article>
-        <button type="button" class="position-relative" onclick="love()">
+        <audio id="pop" src="sound/pop-cat.mp3"></audio>
+        <button type="button" class="love position-relative" onclick="love()">
             <img class="ig" src="image/ig.png">
             <span id="number" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"></span>
+            <br><br><br>
         </button>
     </article>
     <script src="javascript.js"></script>
