--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <button id="musicButton" onclick="playSound()" type="button" class="btn sound"><i class="bi bi-volume-down-fill"></i></button>
-    <audio id="music" src="sound/music.mp3" autoplay loop></audio>
+    <audio id="music" loop><source src="sound/music.mp3" type="audio/mp3"></audio>
     <header>
         <br><br><br><br>
         <h1>Chonnikan Auetanickul</h1>
