fix autoplay music

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <title>Chonnikan's</title>
 </head>
 
-<body>
+<body onmouseenter="music()">
     <button id="musicButton" onclick="playSound()" type="button" class="btn sound"><i class="bi bi-volume-down-fill"></i></button>
-    <audio id="music" loop><source src="sound/music.mp3" type="audio/mp3"></audio>
+    <audio id="music" autoplay loop><source src="sound/music.mp3" type="audio/mp3"></audio>
     <header>
         <br><br><br><br>
         <h1>Chonnikan Auetanickul</h1>
